<resources>
    <string name="app_name" translatable="false">Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="lbl_title_actionbar" translatable="false">My Portfolio App</string>
    <string name="lbl_title_main">My Nanodegree Apps!</string>
    <string name="btn_label_spotify" translatable="false">Spotify Streamer</string>
    <string name="btn_label_scores" translatable="false">Scores App</string>
    <string name="btn_label_library" translatable="false">Library App</string>
    <string name="btn_label_bigger" translatable="false">Buid it Bigger</string>
    <string name="btn_label_reader" translatable="false">XYZ Reader</string>
    <string name="btn_label_capstone" translatable="false">Capstone: my own app</string>
    <string name="msg_label_toast">This button will launch my</string>
</resources>
