<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#CFD8DC">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_title_main"
        android:id="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/btn_label_spotify"
        android:id="@+id/btn_spotify"
        android:layout_below="@+id/textView"
        android:background="#F08C35"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/btn_label_scores"
        android:id="@+id/btn_scores"
        android:background="#F08C35"
        android:layout_centerVertical="true"
        android:layout_below="@+id/btn_spotify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/btn_label_library"
        android:id="@+id/btn_library"
        android:background="#F08C35"
        android:layout_centerVertical="true"
        android:layout_below="@+id/btn_scores"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/btn_label_bigger"
        android:id="@+id/btn_bigger"
        android:background="#F08C35"
        android:layout_centerVertical="true"
        android:layout_below="@+id/btn_library"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/btn_label_reader"
        android:id="@+id/btn_reader"
        android:background="#F08C35"
        android:layout_centerVertical="true"
        android:layout_below="@+id/btn_bigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/btn_label_capstone"
        android:id="@+id/btn_capstone"
        android:background="@android:color/holo_red_dark"
        android:layout_below="@+id/btn_reader"
        android:layout_alignLeft="@+id/btn_reader"
        android:layout_alignStart="@+id/btn_reader"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

</RelativeLayout>
